--- a/interface.css
+++ b/interface.css
@@ -1,23 +1,27 @@
 body {
-    background-color: #19171c;
+    background-color: #191919;
     color: white;
+    text-align: left;
 }
 
-#title {
+#title1 {
     text-align: center;
     font-size: 25px;
+}
+
+#title2 {
+    text-align: center;
+    font-size: 25px;
+}
+
+#DevTwitter {
+    color: white;
 }
 
 #build {
     text-align: center;
-    font-size: 25px;
-}
-
-#updates {
-    text-align: center;
-    font-size: 25px;
 }
 
 #sessions {
-    text-align: center
+    text-align: center;
 }
