--- a/interface.css
+++ b/interface.css
@@ -4,6 +4,27 @@ body {
     text-align: left;
 }
 
+table {
+    text-align: center;
+    border: 5px solid;
+    border-color: gray;
+    align-items: center;
+    width: auto;
+    height: auto;
+}
+
+
+td {
+    text-align: center;
+    align-items: center;
+    border-right: solid;
+    border-right-color: gray;
+    border-left: solid;
+    border-left-color: gray;
+    width: auto;
+    height: auto;
+}
+
 #title1 {
     text-align: center;
     font-size: 25px;
@@ -24,41 +45,4 @@ body {
 
 #sessions {
     text-align: center;
-}
-
-#Ressurces {
-    position: absolute;
-    border: 5px solid grey;
-    margin: auto;
-    max-height: 100px;
-    min-width: 65px;
-    left: 0px;
-    max-width: 100%;
-}
-
-#Upgrades {
-    position: absolute;
-    border: 5px solid grey;
-    margin: auto;
-    max-height: 100px;
-    min-width: 65px;
-    max-width: 100%;
-}
-
-#Buildings {
-    position: absolute;
-    border: 5px solid grey;
-    margin: auto;
-    max-height: 100px;
-    min-width: 65px;
-    max-width: 100%;
-}
-
-#Population {
-    position: absolute;
-    border: 5px solid grey;
-    margin: auto;
-    max-height: 100px;
-    min-width: 65px;
-    max-width: 100%;
 }
